fixed gap issues for recipes section

--- a/styles/sass/partials/_recipe-section.scss
+++ b/styles/sass/partials/_recipe-section.scss
@@ -13,52 +13,49 @@
 
     .column {
         display: flex;
-        width: 48%;
-        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
         padding: 0px;
 
         .box {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            padding: 32px;
-            gap: 10px;
             box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
-            border: 4px solid $primary;
-
+            width: 48%;
             border-radius: 4px;
-            width: 100%;
             margin: 20px 0;
             background-color: $quinary;
+            align-items: center;
+            padding: 40px 0;
 
             .img-wrapper {
                 display: flex;
                 width: 75%;
                 box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
                 border-radius: 4px;
-                object-fit: fill;
                 box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
+
                 img {
-                    object-fit: fill;
                     width:100%;
+                    border-radius: 5px;
                 }
             }
 
             .text-container {
                 width: 75%; 
-                
-                .text-heading {
-                        display: flex;
-                        align-items: center;
-                        width: 100%;
-                    }
-                
-                    .paragraph-container {
-                        display: flex;
-                        align-items: center;
-                        width: 100%;
-                    }
 
+                h3 {
+                        display: flex;
+                        align-items: center;
+                        width: 100%;
+                        margin: 15px 0;
+                        text-align: center;
+                }      
+                p{
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                }
             }
         }
     }
